# Fokin_Alexey_D__RIS-25-2b__LabsPSTU__Programming

./: README.md
sem2/OOP_Lab_1/: CMakeLists.txt  Lab1.cpp  Lab1.h  LabOOP1.cpp  OOP_1.odt  UML.drawio
sem2/OOP_Lab_2/: CMakeLists.txt  LabOOP2.cpp  OOP_2.odt  Pay.cpp  Pay.h  UML.drawio
sem2/OOP_Lab_3/: CMakeLists.txt  LabOOP3.cpp  OOP_3.odt  Pair.cpp  Pair.h  Диаграмма без названия.drawio
sem2/OOP_Lab_4/: 4.drawio  CMakeLists.txt  LabOOP4.cpp  OOP_4.odt  Person.cpp  Person.h  Student.cpp  Student.h
sem2/OOP_Lab_5/: 5.drawio  CMakeLists.txt  LabOOP5.cpp  OOP_5.odt  Object.cpp  Object.h  Person.cpp  Person.h  Student.cpp  Student.h  Vector.cpp  Vector.h
sem2/OOP_Lab_6/: 6.drawio  CMakeLists.txt  LabOOP6.cpp  List.cpp  List.h  OOP_6.odt
sem2/OOP_Lab_7/: CMakeLists.txt  LabOOP7.cpp  List.h  OOP_7.odt  Pair.cpp  Pair.h  Диаграмма без названия.drawio
sem2/OOP_Lab_8/: 8.drawio  CMakeLists.txt  Dialog.cpp  Dialog.h  Event.h  LabOOP8.cpp  List.cpp  List.h  Magazin.cpp  Magazin.h  OOP_8.odt  Object.h  Print.cpp  Print.h
